# gar-virt

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md
.github/workflows/: checks.yaml
cmake/: checks.cmake  dependencies.cmake  options.cmake  sanitizers.cmake
cmake/modules/: Findlibvirt.cmake
dependencies/libraries/: download.sh  files.sha256
dependencies/tools/: download.sh  files.sha256
docker/alpine/: Dockerfile
docker/ubuntu/: Dockerfile
main/: CMakeLists.txt
main/proto/: LICENSE  version.txt
main/src/: config.cpp  config.hpp  http.cpp  main copy.cpp  main.cpp  program_options.hpp  scripting.cpp  scripting.hpp  state.cpp  state.hpp  version.hpp
main/src/commands/: commands.hpp  daemon.cpp  test.cpp
main/src/gitea/: gitea_log_reporter.cpp  gitea_log_reporter.hpp  gitea_runner_credentials.hpp  gitea_runner_service_client.cpp  gitea_runner_task_poller.cpp  gitea_runner_task_processor.cpp  gitea_workflow.cpp  gitea_workflow.hpp  gitea_workflow_executor.cpp  gitea_workflow_executor.hpp
main/src/machine/: docker_container_id.hpp  docker_engine_client.cpp  docker_machine.cpp  docker_machine_manager.hpp  docker_machine_manager_factory.cpp  docker_machine_manager_factory.hpp  docker_machine_options.hpp  machine_manager_factory.hpp  machine_manager_factory_selector.cpp  machine_manager_factory_selector.hpp
modules/: CMakeLists.txt
modules/gitea/: CMakeLists.txt
modules/gitea/include/gitea/: admin_service_client.hpp  runner.hpp  runner_service_client.hpp
modules/gitea/proto/runner/v1/: messages.proto
modules/gitea/src/: admin_service_client.cpp  runner.cpp  runner_service_client.cpp
modules/gitea_proto/: CMakeLists.txt
modules/gitea_proto/runner/v1/: messages.proto
modules/main/: CMakeLists.txt
modules/main/src/: commands.cpp  commands.hpp  config.cpp  config.hpp  core.cpp  core.hpp  error.cpp  error.hpp  http.cpp  http.hpp  log.cpp  log_reporter.hpp  main.cpp  program_options.hpp  protobuf_helper.cpp  protobuf_helper.hpp  scripting.cpp  scripting.hpp  state.cpp  state.hpp
modules/main/src/commands/: commands.hpp  daemon.cpp  register.cpp
modules/main/src/docker/: container_id.hpp  engine_client.cpp  engine_client.hpp  machine.cpp  machine.hpp  machine_manager.cpp  machine_manager.hpp  machine_manager_factory.cpp  machine_manager_factory.hpp  machine_options.cpp  machine_options.hpp
modules/main/src/gitea/: gitea_log_reporter.cpp  gitea_log_reporter.hpp  gitea_runner_service_client.cpp  gitea_runner_service_client.hpp  gitea_runner_task_poller.cpp  gitea_runner_task_poller.hpp  gitea_runner_task_processor.cpp  gitea_runner_task_processor.hpp  gitea_workflow.cpp  gitea_workflow.hpp  gitea_workflow_executor.cpp  gitea_workflow_executor.hpp  log_reporter.cpp  log_reporter.hpp  runner_credentials.hpp  runner_service_client.cpp  runner_service_client.hpp  runner_task_poller.cpp  runner_task_poller.hpp  runner_task_processor.cpp  runner_task_processor.hpp  workflow.cpp  workflow.hpp  workflow_executor.cpp  workflow_executor.hpp
modules/main/src/libvirt/: libvirt.cpp  libvirt.hpp  machine.cpp  machine.hpp  machine_manager.hpp  machine_manager_factory.cpp  machine_manager_factory.hpp  machine_options.hpp
modules/main/src/machine/: docker_engine_client.cpp  docker_engine_client.hpp  docker_machine.cpp  docker_machine.hpp  docker_machine_manager.cpp  docker_machine_manager.hpp  docker_machine_manager_factory.cpp  docker_machine_manager_factory.hpp  docker_machine_options.cpp  docker_machine_options.hpp  machine.hpp  machine_manager.hpp  machine_manager_factory.hpp  machine_manager_factory_selector.cpp  machine_manager_factory_selector.hpp
modules/utility/: CMakeLists.txt
modules/utility/include/utility/: algorithm.hpp  concepts.hpp  datetime.hpp  defer.hpp  file_handle.hpp  filesystem.hpp  http.hpp  memstream.hpp  memstreambuf.hpp  shutdown_signal.hpp  spawn.hpp  stream.hpp  string.hpp  temporary_file.hpp  thread_pool_executor.hpp  uuid.hpp
modules/utility/include/utility/encoding/: base64.hpp
modules/utility/include/utility/log/: ansi.hpp  global_logger.hpp  level.hpp  log.hpp  stdout.hpp
modules/utility/src/: datetime.cpp  env.cpp  error.cpp  file_handle.cpp  filesystem.cpp  http.cpp  shutdown_signal.cpp  spawn.cpp  string.cpp  uuid.cpp
modules/utility/src/encoding/: base64.cpp
modules/utility/src/log/: ansi.cpp  global_logger.cpp  stdout.cpp
modules/virt/: CMakeLists.txt
modules/virt/include/virt/: arch.hpp  machine.hpp  machine_manager.hpp  machine_manager_factory_selector.hpp  machine_pool.hpp  machine_pool_details.hpp
modules/virt/src/: arch.cpp  machine.cpp  machine_manager_factory_selector.cpp  machine_pool.cpp
modules/virt/src/libvirt/: container_id.hpp  libvirt.cpp  libvirt.hpp  machine.cpp  machine.hpp  machine_manager.cpp  machine_manager.hpp  machine_manager_factory.cpp  machine_manager_factory.hpp  machine_options.cpp  machine_options.hpp  machine_pool_details.cpp  machine_pool_details.hpp  machine_template_details.cpp  machine_template_details.hpp
packaging/: CMakeLists.txt
sample_config/: config.yaml
sample_config/templates/ubuntu-26.04/: domain.xml  volume.xml
sample_config/templates/windows-2025/: domain.xml  volume.xml
utility/: CMakeLists.txt
utility/include/utility/: env.hpp  file_handle.hpp  filesystem.hpp  memstreambuf.hpp  spawn.hpp  stream.hpp  string.hpp  temporary_file.hpp  uuid.hpp
utility/src/: env.cpp  filesystem.cpp  spawn.cpp  string.cpp  uuid.cpp
